--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,23 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.NavBar {
+  display: flex;
+  background-color: rosybrown;
+  color: white;
+}
+
+.NavBar > * {
+  padding: 0.75em 0.25em;
+  color: inherit;
+  text-decoration: none;
+}
+
+.NavBar > .active {
+  border-bottom: 5px solid white;
+}
+
+.NavBar > *:first-child {
+  margin-left: auto;
+}
